# 4track

./: .gitignore  CMakeLists.txt  README.md
Assets/: 4track.icns
Source/: Main.cpp
Source/Audio/: AudioEngine.cpp  AudioEngine.h  Track.cpp  Track.h  TrackManager.cpp  TrackManager.h  TransportController.cpp  TransportController.h
Source/UI/: AudioSettingsDialog.cpp  AudioSettingsDialog.h  MainComponent.cpp  MainComponent.h  TrackStrip.cpp  TrackStrip.h  TransportBar.cpp  TransportBar.h  VUMeter.cpp  VUMeter.h
